# RasberryPi_Pjt

./: CMakeCache.txt  CMakeLists.txt  Makefile  Motor_velocity.txt  Wono_o_Bot-1.0.out  cmake_install.cmake  communi.c  communi.h  enc1_data.txt  enc2_data.txt  enc_data.txt  error.h  gyro  initial_set.c  initial_set.h  interruption.c  interruption.h  main  main.c  motion  motion.c  motion.h  out  outtest.c  sensing  sensing.c  sensor.c  sensor.h  servo_ir  servo_ir.c  test  test.c  test_serial  test_serial.c  udp_serv  udp_server.c
